--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   font-size: 50.5%;
 }
@@ -55,7 +56,7 @@ html {
   outline: 3px solid red;
 }
 .search__form.inValid::after {
-  content: "Please search correct IPv4 or IPv6";
+  content: "Please search correct IPv4 、 IPv6 or Domain";
   width: 100%;
   position: absolute;
   bottom: -4rem;
