--- a/scss/style.css
+++ b/scss/style.css
@@ -13,18 +13,15 @@ html {
 body {
   position: relative;
   background: hsl(226deg, 43%, 10%);
-  padding: 10rem 0;
-}
-@media (min-width: 768px) {
-  body {
-    padding: 3rem 0 5rem;
-  }
+  min-height: 100vh;
+  padding: 5rem 0;
 }
 
 .cards {
+  position: relative;
+  display: grid;
   width: 90%;
   margin: auto;
-  display: grid;
   gap: 3rem;
 }
 @media (min-width: 576px) {
@@ -35,8 +32,14 @@ body {
 }
 @media (min-width: 768px) {
   .cards {
-    grid-template-rows: repeat(2, 1fr);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    grid-template-rows: repeat(2, 40vh);
     grid-template-columns: repeat(4, 1fr);
+    align-content: center;
   }
 }
 .cards .card {
