--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -1,92 +1,136 @@
 @import "@style/scss/variables";
+@import "@style/scss/mixin";
 
 .navbar {
     position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: $nav_h;
     width: 100%;
-    padding-inline: 2rem;
     background-color: $clr-white;
     z-index: 5;
-    & > * {
-        flex-shrink: 0;
-    }
-    .toggleButton {
+    nav {
         position: relative;
-        width: 2rem;
-        height: 2rem;
-        margin-right: 2rem;
-        z-index: 10;
-    }
-    .logo {
-        height: 3rem;
-    }
-    .backdrop {
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: $clr-black-50;
-        width: 100vw;
-        height: 100vh;
-        visibility: hidden;
-        opacity: 0;
-        z-index: 5;
-        transition: all 0.5s;
-        &.open {
-            visibility: visible;
-            opacity: 1;
-        }
-        &.open ~ .linkList {
-            transform: translateX(0);
-        }
-    }
-    .linkList {
-        position: absolute;
-        left: 0;
-        top: 0;
         display: flex;
-        flex-direction: column;
-        gap: 2rem;
-        width: 20rem;
-        height: 100vh;
-        padding-inline: 2rem;
-        padding-block: 10rem;
+        justify-content: center;
+        align-items: center;
         background-color: $clr-white;
-        transform: translateX(-100%);
-        transition: transform 0.5s;
+        height: 100%;
+        padding-inline: max(2rem, 10vw);
         z-index: 5;
-        li {
-            a {
-                color: $clr-black;
-                font-weight: 700;
+        & > * {
+            flex-shrink: 0;
+        }
+        hr {
+            position: absolute;
+            bottom: 0;
+            width: 80vw;
+            height: 2px;
+            border: none;
+            background-color: $clr-blue-4;
+            margin: 0;
+            display: none;
+            @include respond(ipad) {
+                display: block;
             }
         }
-    }
-    .cart {
-        position: relative;
-        width: 3rem;
-        height: 3rem;
-        margin-inline: auto 2rem;
-        &:after {
-            content: attr(data-amount);
-            position: absolute;
-            display: grid;
-            place-content: center;
-            right: -0.5rem;
-            top: -0.5rem;
+        .toggleButton {
+            position: relative;
             width: 2rem;
-            height: 1.8rem;
-            font-size: 1rem;
-            font-weight: 700;
-            border-radius: 10rem;
-            color: $clr-primary-light;
-            background: $clr-primary;
+            height: 2rem;
+            margin-right: 2rem;
+            z-index: 10;
         }
-    }
-    .avatar {
-        width: 3rem;
-        height: 3rem;
+        .logo {
+            height: 3rem;
+        }
+        .backdrop {
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: $clr-black-50;
+            width: 100vw;
+            height: 100vh;
+            visibility: hidden;
+            opacity: 0;
+            z-index: 5;
+            transition: all 0.5s;
+            &.open {
+                visibility: visible;
+                opacity: 1;
+            }
+            &.open ~ .linkList {
+                transform: translateX(0);
+            }
+        }
+        .linkList {
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+            width: 20rem;
+            height: 100vh;
+            padding-inline: 2rem;
+            padding-block: 10rem;
+            background-color: $clr-white;
+            transform: translateX(-100%);
+            transition: transform 0.5s;
+            z-index: 5;
+            li {
+                border-bottom: 4px solid transparent;
+                a {
+                    color: $clr-black;
+                    font-weight: 700;
+                }
+            }
+            @include respond(desktop) {
+                position: relative;
+                flex-direction: row;
+                align-items: center;
+                height: $nav_h;
+                width: auto;
+                padding: 0;
+                margin-left: 2rem;
+                background-color: transparent;
+                transform: none;
+                li {
+                    height: 100%;
+                    &:hover {
+                        border-bottom: 4px solid $clr-primary;
+                    }
+                    a {
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        vertical-align: middle;
+                    }
+                }
+            }
+        }
+        .cart {
+            position: relative;
+            width: 3rem;
+            height: 3rem;
+            margin-inline: auto 2rem;
+            &:after {
+                content: attr(data-amount);
+                position: absolute;
+                display: grid;
+                place-content: center;
+                right: -0.5rem;
+                top: -0.5rem;
+                width: 2rem;
+                height: 1.8rem;
+                font-size: 1rem;
+                font-weight: 700;
+                border-radius: 10rem;
+                color: $clr-primary-light;
+                background: $clr-primary;
+            }
+        }
+        .avatar {
+            width: 3rem;
+            height: 3rem;
+        }
     }
 }
