--- a/src/assets/style/scss/_mixin.scss
+++ b/src/assets/style/scss/_mixin.scss
@@ -1,6 +1,11 @@
 @mixin respond($breakpoint) {
-    @if $breakpoint == phone {
-        @media (min-width: 500px) {
+    @if $breakpoint == ipad {
+        @media (min-width: 768px) {
+            @content;
+        }
+    }
+    @if $breakpoint == desktop {
+        @media (min-width: 1020px) {
             @content;
         }
     }
