--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -1,15 +1,41 @@
 @import "@style/scss/variables";
+@import "@style/scss/mixin";
 
 .main {
     padding-top: $nav_h;
+    @include respond(ipad) {
+        padding-top: calc($nav_h + 3rem);
+    }
+    @include respond(desktop) {
+        height: max(60rem, 100vh);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10rem;
+        padding-top: $nav_h;
+    }
     .imageBlock {
         position: relative;
-        width: 100%;
+        width: min(50rem, 100%);
         height: 40rem;
-        overflow: hidden;
-        img {
-            object-fit: cover;
-            object-position: center;
+        margin-inline: auto;
+        @include respond(ipad) {
+            width: min(60rem, 80%);
+            height: 50rem;
+        }
+        @include respond(desktop) {
+            display: grid;
+            gap: 2rem;
+            width: min(40%, 50rem);
+            margin-inline: 0;
+        }
+        .largeImage {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            @include respond(ipad) {
+                border-radius: 1rem;
+            }
         }
         .prevButton,
         .nextButton {
@@ -29,9 +55,44 @@
         .nextButton {
             right: 2rem;
         }
+        .imageList {
+            display: flex;
+            justify-content: space-between;
+            button {
+                width: 10rem;
+                height: 10rem;
+                border: 2px solid transparent;
+                border-radius: 1rem;
+                overflow: hidden;
+                &:hover {
+                    img {
+                        opacity: 0.7;
+                    }
+                }
+                &.active {
+                    border: 2px solid $clr-primary;
+                    img {
+                        opacity: 0.5;
+                    }
+                }
+            }
+        }
     }
     .contentBlock {
+        width: min(50rem, 100%);
         padding: 2rem;
+        margin-inline: auto;
+        @include respond(ipad) {
+            width: min(60rem, 80%);
+        }
+        @include respond(desktop) {
+            width: min(40%, 50rem);
+            height: 40rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            margin-inline: 0;
+        }
         .brand {
             color: $clr-primary;
             font-weight: 700;
@@ -49,6 +110,15 @@
         .priceBlock {
             display: flex;
             align-items: center;
+            padding-block: 1rem;
+            @include respond(desktop) {
+                display: grid;
+                grid-template-columns: max-content 1fr;
+                align-items: center;
+                .original_price {
+                    margin-block: 1rem;
+                }
+            }
             .price {
                 color: $clr-black;
                 font-size: 2.5rem;
@@ -66,27 +136,35 @@
                 text-decoration: line-through;
             }
         }
-        .amountBlock {
+        .controlWrap {
             display: flex;
+            flex-direction: column;
             align-items: center;
-            background-color: $clr-blue-4;
-            width: 100%;
-            padding: 2rem;
-            border-radius: 0.5rem;
-            .amount {
-                font-weight: 700;
-                color: $clr-black;
-                margin: auto;
+            gap: 1.5rem;
+            @include respond(desktop) {
+                flex-direction: row;
             }
-        }
-        .addButton {
-            width: 100%;
-            padding-block: 2rem;
-            border-radius: 0.5rem;
-            color: $clr-primary-light;
-            font-weight: 700;
-            background-color: $clr-primary;
-            margin-top: 2rem;
+            .amountBlock {
+                display: flex;
+                align-items: center;
+                background-color: $clr-blue-4;
+                width: 100%;
+                padding: 2rem;
+                border-radius: 0.5rem;
+                .amount {
+                    font-weight: 700;
+                    color: $clr-black;
+                    margin: auto;
+                }
+            }
+            .addButton {
+                width: 100%;
+                padding-block: 2rem;
+                border-radius: 0.5rem;
+                color: $clr-primary-light;
+                font-weight: 700;
+                background-color: $clr-primary;
+            }
         }
     }
 }
