feat: add footer

--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -13,6 +13,7 @@
         align-items: center;
         gap: 10rem;
         padding-top: $nav_h;
+        padding-bottom: $footer_h;
     }
     .imageBlock {
         position: relative;
