--- a/src/assets/style/scss/_variables.scss
+++ b/src/assets/style/scss/_variables.scss
@@ -4,6 +4,7 @@
 
 $clr-primary: hsl(26, 100%, 55%);
 $clr-primary-light: hsl(25, 100%, 94%);
+$clr-primary-hover: hsl(26, 100%, 70%);
 $clr-blue-1: hsl(220, 13%, 13%);
 $clr-blue-2: hsl(219, 9%, 45%);
 $clr-blue-3: hsl(220, 14%, 75%);
