--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -34,6 +34,7 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+            cursor: pointer;
             @include respond(ipad) {
                 border-radius: 1rem;
             }
@@ -165,6 +166,9 @@
                 color: $clr-primary-light;
                 font-weight: 700;
                 background-color: $clr-primary;
+                &:hover {
+                    background-color: $clr-primary-hover;
+                }
             }
         }
     }
